# Fintra-multi-agentic-worklflow

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
data/general-faq/: general-faq.md
data/loan-details/: loan-details.md
data/saving-details/: saving-details.md
docs/: DEPLOY.md
scripts/: bootstrap_pinecone.py  bootstrap_supabase.sql  chat_cli.py  check_supabase.py  ingest.py  smoke_vertex.py
src/fintra/: __init__.py  config.py  llm.py  prompts.py  service.py
src/fintra/agents/: registry.py
src/fintra/api/: app.py  whatsapp.py
src/fintra/graph/: builder.py  nodes.py  state.py
src/fintra/memory/: cache.py  history.py
src/fintra/retrieval/: embeddings.py  vectorstore.py
tests/: conftest.py  test_api.py  test_cache.py  test_graph.py  test_registry.py  test_whatsapp.py
