[project]
name = "fintra"
version = "0.1.0"
description = "Fintra - multi-agent RAG platform serving the Morgan Treasuries assistant (LangGraph + Vertex AI)"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-google-vertexai>=2.0",
    "langchain-pinecone>=0.2",
    "langchain-text-splitters>=0.3",
    "pinecone>=6.0",
    "supabase>=2.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.8",
    "python-dotenv>=1.1",
    "pypdf>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
